--- a/index.html
+++ b/index.html
@@ -33,28 +33,33 @@
             <div class="trial">
                 <h3>Free trial for new & eligible returning subscribers only.</h3>
             </div>
+
         </div>
     </div>
-    </div>
-     <!--Get Hulu banner-->
+    <!--Get Hulu banner-->
     <div class="bottom-banner">
-        <p>"BUNDLE AND SAVE OVER 25%"</p>
-        <img id="channel-logo" src="channel_logo.png" alt="Disney+, ESPN, Hulu">
+        <p>BUNDLE AND SAVE OVER 25%</p>
+        <img id="channel-logo" src="assets/channel_logo.png" alt="Disney+, ESPN, Hulu">
+        <div class="Get">
+            <h2>Get HULU, Disney+, and ESPN+ for $12.99/month.</h2>
+
+            <div class="More-Details">
+                <a href="#">More Details</a>
+            </div>
+            <form>
+                <button id="bundle-button">GET BUNDLE</button>
+            </form>
+        </div>
+        <div class="Terms">
+            <a link="#">Terms Apply</a>
+        </div>
     </div>
-    <div class="Get">
-        <p>Get HULU, Disney+, and ESPN+ for $12.99/month.</p> 
-        </div>
-        <div class ="More-Details">
-            <a href="#">More Details</a>
-        </div>
-    <div class="bundle">
-        <form>
-            <button id="bundle-button">GET BUNDLE</button>
-        </form>
+    </div>
+    </div>
     </div>
     </div>
     <div class="bottom-frame">
-        <img id="hulu-bottom" src="hulubottom.jpg" alt="Example of TV and Movie offerings">
+        <img id="hulu-bottom" src="assets/hulubottom.jpg" alt="Example of TV and Movie offerings">
     </div>
     </div>
     </div>
